--- a/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/app.component.html
+++ b/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-header></app-header>
+<!-- <app-header></app-header> -->
 
 <main>
   <router-outlet></router-outlet>
 </main>
+
+<!-- <router-outlet></router-outlet> -->
