--- a/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/places/places-list/places-list.component.html
+++ b/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/places/places-list/places-list.component.html
@@ -2,7 +2,7 @@
   <mat-tab label="Private Businesses">
     <br>
     <div class="button">
-      <button mat-stroked-button style="float: right; color: lightgreen;">Add New Agent</button>
+      <button mat-stroked-button style="float: right; color: lightgreen;"  (click)="addLocation()">Add New Agent</button>
     </div>
     <br>
     <br>
@@ -42,7 +42,7 @@
   <mat-tab label="Public Businesses">
     <br>
     <div class="button">
-      <button mat-stroked-button style="float: right; color: lightgreen;">Add New Agent</button>
+      <button mat-stroked-button style="float: right; color: lightgreen;" (click)="addLocation()">Add New Agent</button>
     </div>
     <br>
     <br>
