10674049 - officers list & view

--- a/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/authentication/signup/signup.component.html
+++ b/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/authentication/signup/signup.component.html
@@ -109,8 +109,8 @@
   <mat-form-field class="login-full-width" style=" margin-left: 40px">
     <mat-label>User Type</mat-label>
   <mat-select disableRipple formControlName="userType">
-    <mat-option value="PHI User">PHI User</mat-option>
-    <mat-option value="CDC User">CDC User</mat-option>
+    <mat-option value="PHI User">PHI Officers</mat-option>
+    <mat-option value="CDC User">CDC Officers</mat-option>
   </mat-select>
     <mat-error *ngIf="userType.invalid">
       User Type is <strong>required</strong>
