10674049 - officers view & edit

--- a/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/authentication/signup/signup.component.html
+++ b/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/authentication/signup/signup.component.html
@@ -1,5 +1,9 @@
 <mat-card>
-  <div mat-card-avatar class="login-header-image"></div>
+  <mat-grid-list cols="1" rowHeight="9:1">
+    <mat-grid-tile>
+      <img mat-card-avatar style="height: 120px; width: 120px;" src="../../../assets/images/addUser.jpg">
+    </mat-grid-tile>
+  </mat-grid-list>
   <br>
   <mat-card-title style="font-weight: bolder; text-align: center;">Sign Up</mat-card-title>
   <br>
