--- a/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/dashboard/modules/dashboard/dashboard.component.html
+++ b/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/src/app/dashboard/modules/dashboard/dashboard.component.html
@@ -30,9 +30,7 @@
             <h1 style="font-weight: 500;">Coronavirus Disease 2019</h1>
             <h4 style="font-weight: 300;">CDC is responding to the coronavirus outbreak.</h4>
             <a class="button" href="https://www.hpb.health.gov.lk/en/covid-19" target="_"><input class="button"
-                    
-                    type="button"
-                    value="Learn More About COVID-19" /></a>
+                    type="button" value="Learn More About COVID-19" /></a>
         </div>
 
     </div>
@@ -60,8 +58,7 @@
         </h5>
         <!-- <button class="b1" (mouseover)="color='yellow'" (mouseout)="color='red'">What You Need to Know</button> -->
         <a class="b1" href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/covid-19-vaccines"
-            target="_"><input class="b1"  type="button"
-                value="Learn More About COVID-19" /></a>
+            target="_"><input class="b1" type="button" value="Learn More About COVID-19" /></a>
 
 
 
@@ -81,26 +78,22 @@
 
 <br>
 
-<div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px" class="stats-cards">
+<!-- <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px" class="stats-cards">
 
     <a href="https://hpb.health.gov.lk/covid19-dashboard/" class="a">
         <mat-card fxFlex="90">
-            <img style="height: 300px; width: 450px;"
-                src="../../../../assets/conf.jpg"
-                alt="">
+            <img style="height: 300px; width: 450px;" src="../../../../assets/conf.jpg" alt="">
             <app-widget-card label="Relegious Holidays"></app-widget-card>
             <h4 style="color: black;font-weight: 300;">Gather virtually, with people who live with you, or outside and
                 at least 6 feet apart from others</h4>
-            <!-- <app-widget-card label="Relegious Holidays" total="12k" percentage="50" [data]="cards"></app-widget-card> -->
+            
         </mat-card>
     </a>
 
 
     <a href="https://www.epid.gov.lk/web/" class="a">
         <mat-card fxFlex="90">
-            <img style="height: 300px; width: 450px;"
-                src="../../../../assets/vaccine.jpg"
-                alt="">
+            <img style="height: 300px; width: 450px;" src="../../../../assets/vaccine.jpg" alt="">
             <app-widget-card label="COVID -19 Vaccines Work"></app-widget-card>
             <h4 style="color: black;font-weight: 300;">COVID-19 vaccines will help protect you from
                 getting sick or severly ill with COVID-19</h4>
@@ -111,22 +104,20 @@
     <a href="https://hpb.health.gov.lk/covid19-dashboard/" class="a">
         <mat-card fxFlex="90">
             <img style="height: 300px; width: 450px;" src="../../../../assets/DSCF6982.jpg" alt="">
-            <!-- <img style="height: 300px; width: 450px;" src="../../" alt=""> -->
+            
             <app-widget-card label="COVID Data Tracker"></app-widget-card>
             <h4 style="color: black;font-weight: 300;">Find maps and charts tracking cases, deaths, and trends of
                 COVID-19 in the SRI Lanka</h4>
         </mat-card>
     </a>
 
-    <!-- <mat-card fxFlex="25">
-        <app-widget-card label="Referral" total="6k" percentage="20" [data]="cards"></app-widget-card>
-    </mat-card> -->
 
-</div>
 
-<br>
+</div> -->
 
-<mat-divider></mat-divider>
+<!-- <br>
+
+<mat-divider></mat-divider> -->
 
 <br>
 
@@ -178,7 +169,7 @@
 <br>
 <mat-divider></mat-divider>
 
-<h1 style="font-weight: 500;">Travel and COVID-19</h1>
+<!-- <h1 style="font-weight: 500;">Travel and COVID-19</h1>
 <h3 style="font-weight: 400;">Travel increases your chance of getting and spreading COVID-19. Stay home to protect
     yourself and others from
     COVID-19. Airports, bus stations, train stations, and rest stops are all places travelers can be exposed to the
@@ -210,7 +201,7 @@
     friends,
     and community after your travel.</h3>
 
-<h2 style="font-weight: 400;">Get Tested and Stay Home After Travel</h2>
+<h2 style="font-weight: 400;">Get Tested and Stay Home After Travel</h2> -->
 
 <mat-divider>
 
